argo/apps/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-vpn
  namespace: media
  labels:
    app.kubernetes.io/name: transmission-vpn
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission-vpn
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission-vpn
    spec:
      containers:
        - name: transmission-vpn
          image: haugene/transmission-openvpn:latest
          imagePullPolicy: Always
          securityContext:
            privileged: true
          ports:
            - containerPort: 9091
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: data
          persistentVolumeClaim:
            claimName: nfs-pvc-torrents
