argo/apps/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-vpn
  namespace: media
  labels:
    app.kubernetes.io/name: transmission-vpn
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9091
      targetPort: 9091
      protocol: TCP
  selector:
    app.kubernetes.io/name: transmission-vpn
