argo/apps/transmission/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission-vpn
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`download.smeyer.ca`)
      kind: Rule
      services:
        - name: radarr
          port: 80
  tls:
    certResolver: letsencrypt
